--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- Links -->
+
+	<!-- Delete watermark -->
+	<style>
+		#ultimo + div {
+			visibility: hidden;
+		}
+	</style>
+	<!-- === -->
 </head>
 
 <body class="main-content">
@@ -40,7 +48,7 @@ Passionate about creating software and problem-solving.
 I bring a positive attitude and the willingness and motivation to learn new programs and tools.
 				</p>
 				<div class="btn-con">
-					<a href="" class="main-btn">
+					<a href="https://drive.google.com/file/d/1dnUjvsgmdRSWG3kp3rVjgQ1W4srgcmU-/view?usp=sharing" target="_blank" class="main-btn">
 						<span class="btn-text">Download CV</span>
 						<span class="btn-icon"><i class="fas fa-download"></i></span>
 					</a>
@@ -65,7 +73,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 						I love to learn new things, reading and, of course, programming.
 					</p>
 					<div class="btn-con">
-						<a href="" class="main-btn">
+						<a href="https://drive.google.com/file/d/1dnUjvsgmdRSWG3kp3rVjgQ1W4srgcmU-/view?usp=sharing" target="_blank" class="main-btn">
 							<span class="btn-text">Download CV</span>
 							<span class="btn-icon"><i class="fas fa-download"></i></span>
 						</a>
@@ -178,79 +186,79 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 		<section class="section sec3 portfolio" id="portfolio">
 			<div class="main-title">
 				<h2>
-					My <span>Portfolio</span>
+					My <span class="portfolio-title">Portfolio</span>
 					<span class="bg-text">my work</span>
 				</h2>
 				<p class="port-text">Here is some of my work that I've done as a programmer</p>
-				<div class="portfolios">
-					<div class="portfolio-item">
-						<div class="image">
-							<img src="assets/img/Web Developer_Flatline.svg"
-								alt="">
-						</div>
-						<div class="hover-items">
-							<h3>Portfolio Web</h3>
-							<div class="icons">
-								<a href="https://github.com/JustAsteri/Portfolio-Website" target="_blank" class="icon">
-									<i class="fab fa-github"></i>
-								</a>
-							</div>
+			</div>
+			<div class="portfolios">
+				<div class="portfolio-item">
+					<div class="image">
+						<img src="assets/img/Web Developer_Flatline.svg"
+							alt="">
+					</div>
+					<div class="hover-items">
+						<h3>Portfolio Web</h3>
+						<div class="icons">
+							<a href="https://github.com/JustAsteri/Portfolio-Website" target="_blank" class="icon">
+								<i class="fab fa-github"></i>
+							</a>
 						</div>
 					</div>
-					<div class="portfolio-item">
-						<div class="image">
-							<img src="assets/img/swimming.jpg"
-								alt="">
-						</div>
-						<div class="hover-items">
-							<h3>Swimming Dashboard</h3>
-							<div class="icons">
-								<a href="https://github.com/JustAsteri/Portfolio-Website" target="_blank" class="icon">
-									<i class="fab fa-github"></i>
-								</a>
-							</div>
+				</div>
+				<div class="portfolio-item">
+					<div class="image">
+						<img src="assets/img/swimming.jpg"
+							alt="">
+					</div>
+					<div class="hover-items">
+						<h3>Swimming Dashboard</h3>
+						<div class="icons">
+							<a href="https://github.com/JustAsteri/Portfolio-Website" target="_blank" class="icon">
+								<i class="fab fa-github"></i>
+							</a>
 						</div>
 					</div>
-					<div class="portfolio-item">
-						<div class="image">
-							<img src="assets/img/raffle.jpg"
-								alt="">
-						</div>
-						<div class="hover-items">
-							<h3>Raffle program</h3>
-							<div class="icons">
-								<a href="https://github.com/JustAsteri/rifaDeBoletos" target="_blank" class="icon">
-									<i class="fab fa-github"></i>
-								</a>
-							</div>
+				</div>
+				<div class="portfolio-item">
+					<div class="image">
+						<img src="assets/img/raffle.jpg"
+							alt="">
+					</div>
+					<div class="hover-items">
+						<h3>Raffle program</h3>
+						<div class="icons">
+							<a href="https://github.com/JustAsteri/rifaDeBoletos" target="_blank" class="icon">
+								<i class="fab fa-github"></i>
+							</a>
 						</div>
 					</div>
-					<div class="portfolio-item">
-						<div class="image">
-							<img src="assets/img/guess.jpg"
-								alt="">
-						</div>
-						<div class="hover-items">
-							<h3>Guess a number game</h3>
-							<div class="icons">
-								<a href="https://github.com/JustAsteri/Juegito" target="_blank" class="icon">
-									<i class="fab fa-github"></i>
-								</a>
-							</div>
+				</div>
+				<div class="portfolio-item">
+					<div class="image">
+						<img src="assets/img/guess.jpg"
+							alt="">
+					</div>
+					<div class="hover-items">
+						<h3>Guess a number game</h3>
+						<div class="icons">
+							<a href="https://github.com/JustAsteri/Juegito" target="_blank" class="icon">
+								<i class="fab fa-github"></i>
+							</a>
 						</div>
 					</div>
-					<div class="portfolio-item">
-						<div class="image">
-							<img src="assets/img/"
-								alt="">
-						</div>
-						<div class="hover-items">
-							<h3>Platforms Game</h3>
-							<div class="icons">
-								<a href="https://github.com/JustAsteri/Platforms-Game" target="_blank" class="icon">
-									<i class="fab fa-github"></i>
-								</a>
-							</div>
+				</div>
+				<div class="portfolio-item">
+					<div class="image">
+						<img src="assets/img/2022-08-04_11-30.png"
+							alt="">
+					</div>
+					<div class="hover-items">
+						<h3>Platforms Game</h3>
+						<div class="icons">
+							<a href="https://github.com/JustAsteri/Platforms-Game" target="_blank" class="icon">
+								<i class="fab fa-github"></i>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -362,6 +370,10 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 	</div>
 
 	<script src="app.js"></script>
+
+	<!-- Delete watermark -->
+	<div id="ultimo"></div>
+	<!-- === -->
 </body>
 
 </html>
